--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<body bgcolor="#222">
 			<center><div class="body">
 			<h1 style="text-align:center">APÓS SER TROCADA POR<BR> GANHAR ALGUNS KG<BR>ELA CALOU TODOS AO<BR> MOSTRAR COMO ESTÁ HOJE</h1>
-			<img class="image" style="width:90%;height:45%" src="https://brasilmanchete.com/imagens/elae.png?id=1"><br>	
+			<img class="image" style="width:90%;height:45%" src="https://brasilmanchete.com/imagens/elae.jpg"><br>	
 			<h2 style="font-family:'Impact',serif;text-transform: none">As pessoas ficaram chocadas quando<br>Luciana contou sua impressionante<br> história de superação. Este produto<br>totalmente natural, já vem mudando a<br>vida de pessoas a meses! Confira:</h2>
 </div>	<div class="body">
 			<br>
